@@ -15,6 +15,11 @@ interface ImplicitPySymbolsCache {
             .filter { symbol -> symbol.identifier == name }
             .toList()
 
+    fun contains(smkScope: SmkCodeInsightScope, name: String) = this[smkScope]
+            .asSequence()
+            .any { symbol -> symbol.identifier == name }
+
+
     companion object {
         fun emptyCache() = object : ImplicitPySymbolsCache {
             override val contentVersion = 0
