@@ -16,7 +16,9 @@ import com.jetbrains.snakecharm.SnakemakeBundle
 import com.jetbrains.snakecharm.codeInsight.ImplicitPySymbolsProvider
 import com.jetbrains.snakecharm.codeInsight.SmkCodeInsightScope
 import com.jetbrains.snakecharm.codeInsight.SnakemakeAPI
+import com.jetbrains.snakecharm.codeInsight.SnakemakeAPI.SMK_SL_INITIAL_TYPE_ACCESSIBLE_SECTIONS
 import com.jetbrains.snakecharm.lang.SnakemakeNames
+import com.jetbrains.snakecharm.lang.SnakemakeNames.RUN_SECTION_VARIABLE_RULE
 import com.jetbrains.snakecharm.lang.psi.SmkRuleOrCheckpoint
 import com.jetbrains.snakecharm.lang.psi.SmkRuleOrCheckpointArgsSection
 
@@ -52,37 +54,78 @@ class SMKImplicitPySymbolsCompletionProvider : CompletionProvider<CompletionPara
         val contextElement = parameters.position
         val contextScope = SmkCodeInsightScope[contextElement]
 
+        val module = ModuleUtilCore.findModuleForPsiElement(parameters.originalFile)
+        val cache = module?.let { ImplicitPySymbolsProvider.instance(module).cache }
+
         if (contextScope == SmkCodeInsightScope.RULELIKE_RUN_SECTION) {
             val ruleOrCheckpoint = PsiTreeUtil.getParentOfType(contextElement, SmkRuleOrCheckpoint::class.java)!!
 
             // wildcards
             result.addElement(
-                    SmkCompletionUtil.createPrioritizedLookupElement(
-                            SnakemakeAPI.SMK_VARS_WILDCARDS,
-                            ruleOrCheckpoint.wildcardsElement,
-                            typeText = SnakemakeBundle.message("TYPES.rule.wildcard.type.text"),
-                            priority = SmkCompletionUtil.SECTIONS_KEYS_PRIORITY
-                    )
+                SmkCompletionUtil.createPrioritizedLookupElement(
+                    SnakemakeAPI.SMK_VARS_WILDCARDS,
+                    ruleOrCheckpoint.wildcardsElement,
+                    typeText = SnakemakeBundle.message("TYPES.rule.wildcard.type.text"),
+                    priority = SmkCompletionUtil.SECTIONS_KEYS_PRIORITY
+                )
             )
 
-            // threads
-            val threadsSection = ruleOrCheckpoint.statementList.statements.asSequence()
+            // if section isn't provided, let's still add it to completion list
+            // * Do not add item if section exists (existing sections are in completion list as Named Elements)
+            //   let's do not duplicate this
+            // * If section in implicit provider => also avoid duplicated items
+            for (sectionName in SMK_SL_INITIAL_TYPE_ACCESSIBLE_SECTIONS) {
+                if (cache != null) {
+                    if (cache.contains(SmkCodeInsightScope.RULELIKE_RUN_SECTION, sectionName)) {
+                        // avoid duplicated items in completion list
+                        continue
+                    }
+                }
+
+                val psiSection = ruleOrCheckpoint.statementList.statements.asSequence()
                     .filterIsInstance<SmkRuleOrCheckpointArgsSection>()
-                    .filter { it.name == SnakemakeNames.SECTION_THREADS }.firstOrNull()
-            result.addElement(
+                    .filter { it.name == sectionName }.firstOrNull()
+
+                if (psiSection != null) {
+                    // Will be added by PyCharm API control flow because sections are Named Elements
+                    continue
+                }
+
+                result.addElement(
                     SmkCompletionUtil.createPrioritizedLookupElement(
-                            SnakemakeNames.SECTION_THREADS,
-                            threadsSection,
-                            typeText = SnakemakeBundle.message("TYPES.rule.section.type.text"),
-                            priority = SmkCompletionUtil.SECTIONS_KEYS_PRIORITY
+                        sectionName,
+                        psiSection,
+                        typeText = SnakemakeBundle.message("TYPES.rule.section.type.text"),
+                        priority = SmkCompletionUtil.SECTIONS_KEYS_PRIORITY
                     )
+                )
+            }
+
+            // Fake variable: jobid
+            result.addElement(
+                SmkCompletionUtil.createPrioritizedLookupElement(
+                    SnakemakeNames.RUN_SECTION_VARIABLE_JOBID,
+                    null,
+                    typeText = SnakemakeBundle.message("TYPES.rule.run.variable.type.text"),
+                    priority = SmkCompletionUtil.SECTIONS_KEYS_PRIORITY
+                )
+            )
+
+            // Fake variable: rule
+            result.addElement(
+                SmkCompletionUtil.createPrioritizedLookupElement(
+                    RUN_SECTION_VARIABLE_RULE,
+                    null,
+                    typeText = SnakemakeBundle.message("TYPES.rule.run.variable.type.text"),
+                    priority = SmkCompletionUtil.SECTIONS_KEYS_PRIORITY
+                )
             )
         }
 
-        val module = ModuleUtilCore.findModuleForPsiElement(parameters.originalFile)
+
         if (module != null) {
             val processor = SmkCompletionVariantsProcessor(contextElement)
-            val cache = ImplicitPySymbolsProvider.instance(module).cache
+            requireNotNull(cache)
 
             SmkCodeInsightScope.values().asSequence()
                     .filter { symbolScope -> contextScope.includes(symbolScope) }
