@@ -123,3 +123,4 @@ INSP.NAME.unresolved.subscription.ref=Unresolved key ''{0}''
 # Types
 TYPES.rule.section.type.text=rule section
 TYPES.rule.wildcard.type.text=rule wildcard
+TYPES.rule.run.variable.type.text=run section parameter
