@@ -13,6 +13,7 @@ Features:
 
 Fixed:
 - Rule not yet defined false positive for lambdas (see #286)
+- Unresolved reference for 'rule' in 'run' section (see #283)
 
 Version 0.6.0 build #0.6.0.165
 -------------
